--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="permission_camera_rationale">L\'accès à la caméra est nécessaire pour lire le code barre</string>
     <string name="low_storage_error">Les dépendances du détecteur de visage ne peuvent pas être téléchargés à cause d\'un manque d'espace</string>
     <string name="no_camera_permission">Cette application nécessite l\'accès à la caméra pour fonctionner.</string>
+
+    <string name="title_activity_intro">IntroActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
 </resources>
