--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name" translatable="false">Colis NC</string>
     <string name="ok">OK</string>
     <string name="permission_camera_rationale">L\'accès à la caméra est nécessaire pour lire le code barre</string>
-    <string name="low_storage_error">Les dépendances du détecteur de visage ne peuvent pas être téléchargés à cause d\'un manque d'espace</string>
+    <string name="low_storage_error">Les dépendances du détecteur de visage ne peuvent pas être téléchargés à cause d\'un manque d\'espace</string>
     <string name="no_camera_permission">Cette application nécessite l\'accès à la caméra pour fonctionner.</string>
 
     <string name="title_activity_intro">IntroActivity</string>
